Fix darkmodetoggle alignment

--- a/src/styles/components/darkmodetoggle.scss
+++ b/src/styles/components/darkmodetoggle.scss
@@ -1,10 +1,12 @@
 .dark-mode-toggle {
   display: flex;
+  align-items: center;
+  justify-content: center;
   margin: 0 auto;
   & > button {
     padding: 0;
     margin: 1px;
-    font-size: 1.7em;
+    font-size: 1.5em;
     background: none;
     border: none;
     color: #ffae00;
