--- a/src/styles/components/toggle.scss
+++ b/src/styles/components/toggle.scss
@@ -19,7 +19,7 @@
     outline: none;
   
     &:checked + label {
-      left: 20px;
+      left: 18px;
     }
   
     &:focus-visible {
